Added lualine to nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,41 @@
+unbind r
+bind r source-file ~/.tmux.conf
+
 set -s escape-time 0
 
 unbind C-b
 set-option -g prefix C-a
 
 setw -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+set -g mouse on
+set-option -g status-position bottom
+
+set -g default-terminal 'xterm-256color'
+set -ag terminal-overrides ',*:Tc'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+# Catppuccin
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+
+set -g @catppuccin_flavor 'mocha'
+
+set -g @thm_mantle '#282c34'
+set -g @thm_blue '#77a8f9'
+set -g @thm_lavender '#b0b9fd'
+set -g @catppuccin_window_status_style 'rounded'
+
+run ~/.tmux/plugins/tmux/catppuccin.tmux
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ''
+set -g status-right ''
+
+run '~/.tmux/plugins/tpm/tpm'
